--- a/matcher/templates/changesets.html
+++ b/matcher/templates/changesets.html
@@ -9,22 +9,23 @@
 <table class="table table-hover">
 {% for obj in objs %}
 <tr>
-<td>
-  {% if obj.created %}
-    {{ obj.created.strftime('%H:%M %a, %d %b %Y') }}
-  {% endif %}
+<td class="text-nowrap">
+    <a href="https://www.openstreetmap.org/changeset/{{ obj.id }}">
+        {{- obj.created.strftime('%H:%M %a, %d %b %Y') if obj.created else obj.id -}}
+    </a>
 </td>
-<td><a href="https://www.openstreetmap.org/changeset/{{ obj.id }}">{{ obj.id }}</a></td>
-<td><a href="https://www.openstreetmap.org/user/{{ obj.user.username }}">{{ obj.user.username }}</a></td>
+<td class="text-nowrap"><a href="https://www.openstreetmap.org/user/{{ obj.user.username }}">{{ obj.user.username }}</a></td>
 <td>{{ obj.comment }}</td>
 <td>
     {% if obj.place %}
-    {{ obj.place.name }}
+    <a href="{{ obj.place.candidates_url() }}">{{ obj.place.name }}</a>
+    {% elif obj.item_id %}
+    <a href="{{ url_for('item_page', wikidata_id=obj.item_id) }}">Q{{ obj.item_id }}</a>
     {% else %}
-    Q{{ obj.item_id }}
+    unknown location
     {% endif %}
 </td>
-<td>{{ obj.update_count }}</td>
+<td class="text-right">{{ '{:,d}'.format(obj.update_count) }}</td>
 </tr>
 {% endfor %}
 </table>
