--- a/matcher/templates/overpass.html
+++ b/matcher/templates/overpass.html
@@ -2,32 +2,18 @@
 
 {% block title %}{{ place.display_name }}:{% endblock %}
 
+{% set oql = place.get_oql() %}
 {% block content %}
-  <div class="container my-2">
-  <div class="row">
-  <div class="col">
+<div class="container my-2">
     <h1>{{ place.name }}</h1>
-  {% set q = place.display_name %}
 
-    <div class="box">
-      <b>{{ place.display_name }}</b><br>
-      category: {{ place.category }}
-      &mdash;
-      type: {{ place.type }}
-      &mdash;
-      OSM: <a href="https://www.openstreetmap.org/{{ place.osm_type }}/{{ place.osm_id }}">{{ place.osm_type}} {{ place.osm_id }}</a><br>
-    </div>
+    {{ place_box(place) }}
 
-  {% include "tabs.html" with context %}
+    {% include "tabs.html" with context %}
 
-  </div>
-  </div>
+    <h4>Overpass</h4>
 
-  <h4>Overpass</h4>
+    <pre>{{ oql }}</pre>
 
-  <pre>{{ place.get_oql() }}</pre>
-
-</div>
-</div>
 </div>
 {% endblock %}
