read place tags from wikidata
closes: #45

--- a/matcher/templates/already_tagged.html
+++ b/matcher/templates/already_tagged.html
@@ -31,7 +31,7 @@
   </div>
 
   {% for i in items %}
-    <p><a href="{{ url_for('item_page', wikidata_id=i.qid[1:]) }}">{{ i.enwiki }} ({{ i.qid }})</a></p>
+    <p><a href="{{ url_for('item_page', wikidata_id=i.qid[1:]) }}">{{ i.label }} ({{ i.qid }})</a></p>
     {# <br>
     <ul>
       <li>Categories:
