--- a/matcher/templates/candidates.html
+++ b/matcher/templates/candidates.html
@@ -56,6 +56,7 @@
     <form method="POST" action="{{ url_for('add_tags', osm_type=place.osm_type, osm_id=place.osm_id) }}">
 
       <button class="btn btn-primary">add wikidata tags to OpenStreetMap</button>
+      (Don't worry, there is a confirmation page)
       {% endif %}
 
     <div class="my-3">
@@ -87,6 +88,7 @@
     </div>
     {% if filtered and g.user.is_authenticated %}
       <button class="btn btn-primary">add wikidata tags to OpenStreetMap</button>
+      (Don't worry, there is a confirmation page)
     </form>
     {% endif %}
 
