--- a/matcher/templates/search_results.html
+++ b/matcher/templates/search_results.html
@@ -4,7 +4,7 @@
 {% for hit in results %}
   <div class="box">
     {% if hit.icon %}<img src="{{ hit.icon.replace('http://', 'https://') }}">{% endif %}
-      {% if hit.category != 'highway' and (hit.osm_type == 'node' or not hit.area or hit.area < 90000) %}
+      {% if hit.osm_type != 'node' and hit.category != 'highway' and (hit.osm_type == 'node' or not hit.area or hit.area < 90000) %}
       <b>
         {% if name %}
           <a href="{{ url_for('matcher_progress', osm_id=hit.osm_id) }}">{{ name }}</a>,
