--- a/matcher/templates/item_page.html
+++ b/matcher/templates/item_page.html
@@ -1,4 +1,33 @@
-{% from "macro.html" import place_box, candidate_info %}
+{% macro candidate_info(c, upload_option) %}
+  {% set m = c.get_match() %}
+  <li>
+    {% if 'wikidata' not in c.tags and upload_option %}
+      <input type="radio" name="{{ osm }}" value="{{ c.osm_type }}/{{ c.osm_id }}">
+    {% endif %}
+    <a href="https://www.openstreetmap.org/{{ c.osm_type }}/{{ c.osm_id }}">
+      {{ (m.osm_key + '=' + m.osm_name) if m else c.name }}
+    </a>
+    ({{ c.osm_type}}{% if c.dist %},
+     {{ c.dist | int }} m{% endif %})
+     {{ ', '.join(c.matching_tags()) }}
+
+     <a href="#" class="show_tags_link" data-key="{{ c.key }}">show all tags</a>
+     <div class="all_tags" id="candidate{{ c.key }}">
+       {% for k, v in c.tags.items() if k != 'way_area' %}
+        {{ k }}: {{ v }}</br>
+       {% endfor %}
+     </div>
+     {% if 'wikidata' in c.tags %}
+       <br>
+       {% if c.tags.wikidata == c.item.qid %}
+         wikidata <span class="match">match</span>: {{ c.tags.wikidata }}
+       {% else %}
+         wikidata <span class="mismatch">mismatch</span>: <a href="https://www.wikidata.org/wiki/{{ c.tags.wikidata }}">{{ c.tags.wikidata }}</a>
+       {% endif %}
+     {% endif %}
+    </li>
+{% endmacro %}
+
 {% extends "base.html" %}
 
 {% block style %}
@@ -108,9 +137,9 @@
     {% endif %}
 
     <h3>matches</h3>
-    {% if False and upload_option %}
-    <form method="POST" action="{{ url_for('add_tags', osm_type=place.osm_type, osm_id=place.osm_id) }}">
-      <button class="btn btn-primary">add wikidata tags to OpenStreetMap</button>
+    {% if upload_option %}
+    <form method="post" action="{{ url_for('add_wikidata_tag') }}">
+      <button class="btn btn-primary">add wikidata tag to OpenStreetMap</button>
       <input type="hidden" name="wikidata" value="{{ qid }}" />
     {% endif %}
     {% if item %}
@@ -121,15 +150,7 @@
 
 
       {% for c in item.candidates %}
-        {{ candidate_info(c, filtered=filtered) }}
-        {% if 'wikidata' not in c.tags and g.user.is_authenticated %}
-          <form method="post" action="{{ url_for('add_wikidata_tag') }}">
-            <input type="hidden" name="osm_id" value="{{ c.osm_id }}" />
-            <input type="hidden" name="osm_type" value="{{ c.osm_type }}" />
-            <input type="hidden" name="wikidata" value="{{ qid }}" />
-            <button class="btn btn-primary" type="submit">add wikidata tag to OSM</button>
-          </form>
-        {% endif %}
+        {{ candidate_info(c, upload_option) }}
       {% endfor %}
     {% else %}
       {% if not found %}
@@ -137,7 +158,11 @@
       {% else %}
         <ul>
         {% for c, m in found %}
-          <li><a href="https://www.openstreetmap.org/{{ c.type }}/{{ c.id }}">
+          <li>
+            {% if 'wikidata' not in c.tags and upload_option %}
+              <input type="radio" name="{{ osm }}" value="{{ c.osm_type }}/{{ c.osm_id }}">
+            {% endif %}
+            <a href="https://www.openstreetmap.org/{{ c.type }}/{{ c.id }}">
             {{ (m.osm_key + '=' + m.osm_name) if m else c.tags.name }}
           </a> ({{ c.type}})
 
@@ -147,21 +172,26 @@
               {{ k }}={{ v }}</br>
              {% endfor %}
            </div>
-           </li>
-
-          {% if 'wikidata' not in c.tags and g.user.is_authenticated %}
-            <form method="post" action="{{ url_for('add_wikidata_tag') }}">
-              <input type="hidden" name="osm_id" value="{{ c.id }}" />
-              <input type="hidden" name="osm_type" value="{{ c.type }}" />
-              <input type="hidden" name="wikidata" value="{{ qid }}" />
-              <button class="btn btn-primary" type="submit">add wikidata tag to OSM</button>
-            </form>
-          {% else %}
+          {% if 'wikidata' in c.tags %}
             <p>OSM already includes wikidata tag.</p>
           {% endif %}
+           </li>
+
         {% endfor %}
         </ul>
       {% endif %}
+    {% endif %}
+
+    {% if upload_option %}
+      <label for="comment">change comment:</label>
+      <input class="form-control m-2"
+             id="comment"
+             name="comment"
+             size="40"
+             value="add wikidata tag to {{ label }}" />
+
+      <button class="btn btn-primary">add wikidata tag to OpenStreetMap</button>
+      </form>
     {% endif %}
 
     {% if osm_keys %}
