--- a/matcher/templates/macro.html
+++ b/matcher/templates/macro.html
@@ -38,3 +38,33 @@
      {% endif %}
     </li>
 {% endmacro %}
+
+{% macro render_pagination(pagination) %}
+{% if pagination.pages > 1 %}
+<nav>
+  <ul class="pagination">
+  {% if pagination.has_prev %}
+		<li><a href="{{ url_for_other_page(pagination.page - 1) }}">&laquo; Previous</a></li>
+  {% endif %}
+  {%- for page in pagination.iter_pages() %}
+    {% if page %}
+      {% if page != pagination.page %}
+		<li><a href="{{ url_for_other_page(page) }}">{{ page }}</a></li>
+      {% else %}
+        <li class="active"><span>{{ page }}</span></li>
+      {% endif %}
+    {% else %}
+      <li><span class="ellipsis">…</span></li>
+    {% endif %}
+  {%- endfor %}
+  {% if pagination.has_next %}
+    <li>
+      <a href="{{ url_for_other_page(pagination.page + 1) }}" aria-label="Next">
+        <span aria-hidden="true">Next &raquo;</span>
+      </a>
+    </li>
+  {% endif %}
+  </ul>
+</nav>
+{% endif %}
+{% endmacro %}
